Update history.html with new content and video
The HTML structure and content of the history page have been updated, including the addition of a new video link and adjustments to the text and layout.

--- a/history.html
+++ b/history.html
@@ -70,7 +70,7 @@
             <h3 class="cashmere-title mb-4">🎥 Ноолуурын Аялал: Үйлдвэрлэл ба Чанар</h3>
             
             <div class="ratio ratio-16x9 shadow-lg">
-                 <iframe src="https://www.youtube.com/embed/V6dC1r7s79M?rel=0" 
+                 <iframe src="https://www.youtube.com/watch?v=HXE0ciNSQ5c" 
                         title="YouTube video about cashmere" 
                         allowfullscreen>
                 </iframe>
@@ -104,4 +104,5 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="script.js"></script> 
 </body>
+
 </html>
