--- a/care.html
+++ b/care.html
@@ -97,7 +97,7 @@
                     <p class="mb-0">MONGOL CASHMERE &copy; 2025 Он</p>
                 </div>
                 <div class="col-md-6 text-md-end">
-                    <p class="mb-0">Өнөөдрийн огноо: <span id="cru" class="fw-bold"></span></p>
+                    <p class="mb-0">Өнөөдрийн огноо:2025.12.16 <span id="cru" class="fw-bold"></span></p>
                 </div>
             </div>
         </div>
@@ -106,4 +106,5 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="script.js"></script> 
 </body>
+
 </html>
